2014-01-21 Pawel Tomulik <ptomulik@meil.pw.edu.pl>
  * release 0.0.2
  * Fixed a bug in package/package_settings (implicit argument passing of
    super...)
2014-01-18 Pawel Tomulik <ptomulik@meil.pw.edu.pl>
  * release 0.0.1
  * initial commit