@@ -1,8 +1,0 @@
-name    'ptomulik-backport_package_settings'
-version '0.0.2'
-source 'git://github.com/ptomulik/puppet-backport_package_settings.git'
-author 'ptomulik'
-license 'Apache License, Version 2.0'
-summary 'Backport package_settings feature to older puppet versions'
-description 'Add package_settings feature and parameter to package resource if it does not exist'
-project_page 'https://gitbub.com/ptomulik/puppet-backport_package_settings'
